# langsmith-cli

./: .env.example  .gitignore  .goreleaser.yml  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
cmd/langsmith/: main.go
hack/: run.sh
internal/client/: client.go  client_test.go
internal/cmd/: agent_versions.go  agent_versions_test.go  dataset.go  dataset_test.go  deployment.go  deployment_test.go  evaluator.go  evaluator_test.go  example.go  example_test.go  experiment.go  experiment_test.go  filters.go  filters_test.go  helpers.go  helpers_test.go  insights.go  insights_test.go  project.go  project_test.go  root.go  root_test.go  run.go  run_test.go  sandbox.go  sandbox_auth.go  sandbox_box.go  sandbox_console.go  sandbox_snapshot.go  sandbox_ssh.go  sandbox_tunnel.go  sandbox_tunnel_test.go  skill.go  testutil_test.go  thread.go  thread_test.go  trace.go  trace_test.go  update.go  update_test.go
internal/deployment/: config.go  config_test.go  docker.go  docker_test.go  exec.go  helpers.go  helpers_test.go  hostbackend.go  hostbackend_test.go  progress.go  templates.go
internal/extract/: extract.go  extract_test.go
internal/generation/: extractors.go  generation.go  generation_test.go  loaders.go
internal/output/: output.go  (+1 more)
scripts/: install.ps1  install.sh
tests/: conftest.py  test_config.py  test_dataset.py  test_evaluator.py  test_example.py  test_experiment.py  test_filters.py  test_generation.py  test_output.py  test_run.py  test_thread.py  test_trace.py  test_tracing_project.py  test_utils.py
(+20 files in other folders)
